# C-_Starter_Software_Template

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
